[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/fragment_forge/GameGoal.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="GameGoal" type="PanelContainer"]
margin_right = 122.0
margin_bottom = 58.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBC" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 115.0
margin_bottom = 75.0

[node name="GameGoal" type="Label" parent="VBC"]
margin_right = 108.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 1 )
text = "Game Goal"

[node name="Competitions" type="Label" parent="VBC"]
margin_top = 24.0
margin_right = 108.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Competitions"

[node name="Difficulty" type="Label" parent="VBC"]
margin_top = 48.0
margin_right = 108.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "Difficulty"

[node name="EndGame" type="AcceptDialog" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 207.0
margin_bottom = 77.0
popup_exclusive = true

[node name="EndGameTween" type="Tween" parent="."]

[connection signal="confirmed" from="EndGame" to="." method="_on_EndGame_confirmed"]
